# team-blockbusters

./: .gitignore  README.md  SETUP.md  algo_hack.code-workspace
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx  EscrowCard.tsx  NegotiationLog.tsx  Providers.tsx  TxBadge.tsx  VerificationPanel.tsx
frontend/src/components/shared/: TxLink.tsx
frontend/src/components/views/: DeliverView.tsx  IntentView.tsx  NegotiateView.tsx
frontend/src/context/: ShipmentContext.tsx
frontend/src/lib/: api.ts  types.ts
projects/algo_hack/: .algokit.toml  README.md  cleanup_apps.py  fix_route.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
projects/algo_hack/.algokit/: .copier-answers.yml
projects/algo_hack/backend/: algorand_client.py  config.py  main.py  models.py  negotiation.py  requirements.txt  setup_wallets.py  verification.py
projects/algo_hack/backend/agents/: buyer_agent.py  intent_agent.py  seller_agent.py
projects/algo_hack/backend/services/: coingecko_service.py  fuel_service.py  pincode_service.py  route_service.py  weather_service.py
projects/algo_hack/smart_contracts/escrow/: contract.py
projects/algo_hack/smart_contracts/escrow/smart_contracts/artifacts/escrow/: CommerceEscrow.approval.puya.map  CommerceEscrow.approval.teal  CommerceEscrow.arc56.json
projects/algo_hack/smart_contracts/hello_world/: contract.py
