[tool.poetry]
name = "algo_hack"
version = "0.1.0"
description = "Algorand smart contracts"
authors = ["upendrasingh <upendra.singh@tesseris.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = "^4.0.0"
python-dotenv = "^1.0.0"
algorand-python = "^3"
algorand-python-testing = "^1"
fastapi = "^0.135.3"
uvicorn = "^0.44.0"
sse-starlette = "^3.3.4"
google-generativeai = "^0.8.6"
httpx = "^0.28.1"
py-algorand-sdk = "^2.11.1"
pydantic-settings = "^2.13.1"
groq = "^1.1.2"

[tool.poetry.group.dev.dependencies]
algokit-client-generator = "^2.1.0"
puyapy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

